--- a/src/main/resources/com/example/game/views/start-view.fxml
+++ b/src/main/resources/com/example/game/views/start-view.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="450.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" prefHeight="450.0" prefWidth="600.0" spacing="20.0" style="-fx-background-color: #1588e6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="20.0">
          <children>
-            <Label style="-fx-font-weight: bold;" text="Velha Online" />
+            <Label style="-fx-font-weight: bold;" text="Velha Online" textFill="WHITE" />
             <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
-            <Label fx:id="username" text="User" />
+            <Label fx:id="username" text="User" textFill="WHITE" />
          </children>
       </HBox>
       <GridPane alignment="CENTER" prefHeight="344.0" prefWidth="560.0">
@@ -36,26 +36,26 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#onPlayButtonClick" prefHeight="25.0" prefWidth="190.0" text="Jogar" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button mnemonicParsing="false" onAction="#onPlayButtonClick" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #15e67a;" text="Jogar" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="190.0" text="Ranking" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button mnemonicParsing="false" onAction="#onRankingButtonClick" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #e6c315;" text="Ranking" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="25.0" prefWidth="190.0" text="Sair" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Button mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #e62315;" text="Sair" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Label alignment="CENTER" prefHeight="45.0" prefWidth="190.0" text="Menu Inicial" GridPane.columnIndex="2">
+            <Label alignment="CENTER" prefHeight="45.0" prefWidth="190.0" text="Menu Inicial" textFill="WHITE" GridPane.columnIndex="2">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
          </children>
       </GridPane>
-      <Label prefHeight="20.0" text="Nicolas Hilbert · 2023" textAlignment="CENTER">
+      <Label prefHeight="20.0" text="Nicolas Hilbert · 2023" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="10.0" />
          </font>
